# archetype-computing-adaptive-system

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  sMNIST_log_PRON.txt  sMNIST_log_RON_full.txt  sMNIST_log_STACKRON.txt
acds/: __init__.py
acds/archetypes/: __init__.py  esn.py  hcornn.py  lstm.py  pron.py  rnn.py  ron.py  run.py  trainable_pron.py  utils.py
acds/benchmarks/: __init__.py  cifar10.py  libras.py  mackey_glass.py  mallat.py  memory_capacity.py  mnist.py  rc_dataset.py  trace.py
acds/metrics/: __init__.py  attractor.py  lyap_discreteRNN.py  lyapunov.py  metrics.py  performance.py  visualizations.py
acds/networks/: archetipes_network.py  connection_matrices.py
ads/: __init__.py
ads/archetypes/: __init__.py  esn.py  lstm.py  ron.py  utils.py
ads/benchmarks/: __init__.py  adiac.py  mackey_glass.csv  mackey_glass.py  mnist.py
ads/experiments/: adiac.py  mackey_glass.py  smnist.py
att_dim_experiments/: classification.py  forecasting.py
experiments/: adiac.py  adiac_dfa.py  adiac_trained.py  attractors_collective.py  attractors_single.py  cifar10.py  cifar10_gray.py  libras.py  mackey_glass.py  mallat.py  mc_search_ray.py  memorycapacity.py  perturbation_experiment.py  psmnist.py  smnist.py  smnist_dfa.py  trace.py  trained_libras.py  trained_mackey_glass.py  trained_mallat.py  trained_smnist.py  trained_trace.py  utils.py
experiments/attractors_dimension/: lyap_discreteRNN.c  (+1 more)
robots_demo/: train_cobot_classification.py  train_cobot_regression.py  train_squid.py  train_squid_real.py  train_squid_real_topology.py  train_squid_topology.py  train_tomato.py
tests/: test_metrics.py
(+10 files in other folders)
