[tool.poetry]
name = "acds"
version = "0.1.0"
description = "Archetype Computing Adaptive System"
authors = ["Valerio De Caro <43961074+vdecaro@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
torch = ">=2.2.1"
numpy = ">=1.26.4,<2.0.0"
scipy = ">=1.12.0,<2.0.0"
torchvision = ">=0.17.1"
aeon = ">=1.3.0,<2.0.0"
wandb = ">=0.23.1,<1.0.0"
scikit-learn = ">=0.0.0"
scikit-dimension = ">=0.0.0"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
einops = "^0.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
filter_files = true
skip = ["__init__.py"]

[tool.docformatter]
recursive = true
black = true
